--- a/spark/pom.xml
+++ b/spark/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>spark</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
